# appauto-platform

./: .gitignore  CLEANUP_REPORT.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  UPDATE_GUIDE.md  deploy.sh  one-click-deploy.sh  setup-nginx.sh  setup-services.sh  update.sh  设计文档.md
llm-perf-platform/: .env.example  .gitignore  README.md  alembic.ini  logging.ini  main.py  mypy.ini  pyproject.toml
llm-perf-platform/alembic/: README.md  env.py
llm-perf-platform/llm_perf_platform/: main.py
llm-perf-platform/results/: 10_aaa5a305-8b6f-4de5-b0f4-f8bae0f6e50c_20251210_152511.xlsx  12_5cad3770-709d-45c3-93bd-d029dcb37b58_20251210_153602.xlsx  13_495862b8-b364-42c5-898a-19daadbfab1f_20251210_163702.xlsx  14_d9512a2d-ece8-4887-b588-e2868cf2f9e4_20251209_200316.xlsx  16_8802ed75-1bf1-4ad4-a29d-af88f87d687a_20251209_214801.xlsx  17_cb878628-9867-476f-a42c-0f89a6b0dd04_20251210_100930.xlsx  18_ddc3b4f5-e287-42a9-9aa3-7c35e2d97b71_20251210_101226.xlsx  19_67fbac41-77c2-4840-b575-4c3eec97212d_20251210_103046.xlsx  21_a78b23e2-ab99-4ebf-97bb-bce62b74bb58_20251211_110336.xlsx  3_30461925-d5bb-4e86-9e4d-de52c9c65de2_20251210_141012.xlsx  6_e7133f50-053e-41c2-850f-1e4e345692ca_20251210_145750.xlsx  72d83525-4682-4503-9869-cfe18fec38b1_20251209_195639.xlsx  7_d53b2941-ff7a-4947-9683-a7a220fa6214_20251210_150327.xlsx  8_10c03b1f-c298-4ca5-ac3c-38a52cd18d64_20251210_150425.xlsx  9_fa5c8ff3-6eda-461a-909b-f6e235851ea9_20251210_150811.xlsx  hardware_info_19_20251211_104144.json  hardware_info_24_20251211_115419.json  hardware_info_25_20251211_154704.json  task_4.xlsx  task_5.xlsx  (+1 more)
(+74 files in other folders)
