[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm_perf_platform*"]
exclude = ["logs*", "config*", "results*", "alembic*", "archives*", "task_logs*"]

[project]
name = "llm-perf-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.3",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
    "alembic>=1.13.0",
    "openpyxl>=3.1.5",
    "bcrypt>=4.1.2",
    "email-validator>=2.1.1",
    "asyncssh>=2.14.0",
    "paramiko>=3.4.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.2",
    "appauto @ file:///Users/ryanyang/work/approaching/code/appauto",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "httpx>=0.27.2",
]

